src/test/wacc/invalid/whack/q7.wacc
# how much wacc could a whack wacc whack,
# if a whack wacc could whack wacc

begin
    bool f(int a, int b) is
        if x < y then return 0
        else          return 1
        fi;
        println "dead code..."
    end

    println call f(5, 6)
end
